--- a/review.html
+++ b/review.html
@@ -133,7 +133,7 @@
 <body>
     
     <div class="top">
-        <a href="home.html" class="link">Home</a>
+        <a href="index.html" class="link">Home</a>
         <a href="about.html" class="link">About</a>
         <a href="collection.html" class="link">Collections</a>
         <a href="review.html" class="link">Review</a>
